# tap-openweathermap

./: .gitignore  README.md  meltano.yml  pyproject.toml  tap-openweathermap.sh  tox.ini
.github/workflows/: test.yml
tap_openweathermap/: streams.py  tap.py
tap_openweathermap/schemas/: current_weather.py  forecast_weather.py  weather.py
tap_openweathermap/schemas/utils/: custom_object.py
tap_openweathermap/tests/: __init__.py  test_core.py
