[tool.poetry]
name = "tap-openweathermap"
version = "0.1.0"
description = "`tap-openweathermap` is a Singer tap for OpenWeatherMap, built with the Meltano SDK for Singer Taps."
authors = ["Daniel Walker"]
keywords = [
    "ELT",
    "OpenWeatherMap",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
tox = "^3.24.4"
flake8 = "^5.0.4"
black = "^23.3"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.25.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-openweathermap = 'tap_openweathermap.tap:TapOpenWeatherMap.cli'
