[tool.poetry]
name = "tap-openweathermap"
version = "0.1.0"
description = "`tap-openweathermap` is a Singer tap for OpenWeatherMap, built with the Meltano SDK for Singer Taps."
authors = ["Daniel Walker"]
keywords = [
    "ELT",
    "OpenWeatherMap",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
singer-sdk = "^0.48.1"

[tool.poetry.dev-dependencies]
pytest = "^8.4.2"
tox = "^4.30.3"
flake8 = "^7.3.0"
black = "^25.9"
pydocstyle = "^6.1.1"
mypy = "^1.18"
types-requests = "^2.32.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-openweathermap = 'tap_openweathermap.tap:TapOpenWeatherMap.cli'
